# fwj

./: .envrc  .gitignore  Cargo.toml  README.md  bakflake  config.yaml  flake.nix  justfile
data/: subquery-data.csv  subquery-data.json
rubrics/: subquery-decomp.jinja
src/: cli.rs  download.rs  main.rs  models.rs  tests.rs
