[package]
name = "fwj"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
console = "0.15.8"
env_logger = "0.11.5"
flate2 = "1.0"
futures = "0.3.30"
futures-util = "0.3.30"
indexmap = "2.5.0"
indicatif = "0.17.8"
lazy_static = "1.5.0"
log = "0.4.22"
minijinja = { version = "2.3.1", features = ["loader"] }
nix = "0.29.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
sha2 = "0.10.8"
tar = "0.4.41"
tempfile = "3.12.0"
termcolor = "1.4.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"]}
tokio-macros = { version = "0.2.0-alpha.6" }
toml = "0.8.19"
zip = "2.2.0"
csv = "1.3.0"
dirs = "5.0.1"
clap_complete = "4.5.29"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", branch = "master", features = ["cuda", "flash-attn" ] }
anyhow = "1.0.89"
